--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,7 +70,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=de.andreasgiemza.mangadownloader.Gui
+main.class=de.andreasgiemza.mangadownloader.MangaDownloader
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
