--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jsoup-1.8.1.jar}
+    ${file.reference.jsoup-1.8.1.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
