download gui improved

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jsoup-1.8.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.jsoup-1.8.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
