--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.jar=${dist.dir}/MangaDownloader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.json-20141113.jar=lib\\json-20141113.jar
 file.reference.jsoup-1.8.1.jar=lib\\jsoup-1.8.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jsoup-1.8.1.jar}
+    ${file.reference.jsoup-1.8.1.jar}:\
+    ${file.reference.json-20141113.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
