--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,15 +30,31 @@ dist.jar=${dist.dir}/MangaDownloader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.json-20141113.jar=lib\\json-20141113.jar
+file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
+file.reference.gson-1.4.jar=lib\\gson-1.4.jar
+file.reference.guava-11.0.2.jar=lib\\guava-11.0.2.jar
+file.reference.javassist-3.12.1.GA.jar=lib\\javassist-3.12.1.GA.jar
 file.reference.jsoup-1.8.1.jar=lib\\jsoup-1.8.1.jar
+file.reference.jsr305-1.3.9.jar=lib\\jsr305-1.3.9.jar
+file.reference.reflections-0.9.8.jar=lib\\reflections-0.9.8.jar
+file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
+file.reference.xml-apis-1.0.b2.jar=lib\\xml-apis-1.0.b2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jsoup-1.8.1.jar}:\
-    ${file.reference.json-20141113.jar}
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.gson-1.4.jar}:\
+    ${file.reference.guava-11.0.2.jar}:\
+    ${file.reference.javassist-3.12.1.GA.jar}:\
+    ${file.reference.jsr305-1.3.9.jar}:\
+    ${file.reference.reflections-0.9.8.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
