--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,31 +30,17 @@ dist.jar=${dist.dir}/MangaDownloader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
-file.reference.gson-1.4.jar=lib\\gson-1.4.jar
-file.reference.guava-11.0.2.jar=lib\\guava-11.0.2.jar
-file.reference.javassist-3.12.1.GA.jar=lib\\javassist-3.12.1.GA.jar
+file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
+file.reference.guava-18.0.jar=lib\\guava-18.0.jar
 file.reference.jsoup-1.8.1.jar=lib\\jsoup-1.8.1.jar
-file.reference.jsr305-1.3.9.jar=lib\\jsr305-1.3.9.jar
-file.reference.reflections-0.9.8.jar=lib\\reflections-0.9.8.jar
-file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
-file.reference.slf4j-simple-1.6.1.jar=lib\\slf4j-simple-1.6.1.jar
-file.reference.xml-apis-1.0.b2.jar=lib\\xml-apis-1.0.b2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jsoup-1.8.1.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.gson-1.4.jar}:\
-    ${file.reference.guava-11.0.2.jar}:\
-    ${file.reference.javassist-3.12.1.GA.jar}:\
-    ${file.reference.jsr305-1.3.9.jar}:\
-    ${file.reference.reflections-0.9.8.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}:\
-    ${file.reference.slf4j-simple-1.6.1.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.guava-18.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
@@ -74,6 +60,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.gson-2.3.1.jar=lib/gson-2.3.1-javadoc.jar
+javadoc.reference.guava-18.0.jar=lib/guava-18.0-javadoc.jar
 javadoc.reference.jsoup-1.8.1.jar=lib/jsoup-1.8.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
@@ -109,6 +97,8 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.gson-2.3.1.jar=lib/gson-2.3.1-sources.jar
+source.reference.guava-18.0.jar=lib/guava-18.0-sources.jar
 source.reference.jsoup-1.8.1.jar=lib/jsoup-1.8.1-sources.jar
 src.dir=src
 test.src.dir=test
