--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,14 +31,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
-file.reference.jsoup-1.8.1.jar=lib\\jsoup-1.8.1.jar
+file.reference.jsoup-1.8.2.jar=lib\\jsoup-1.8.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jsoup-1.8.1.jar}:\
-    ${file.reference.gson-2.3.1.jar}
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.jsoup-1.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
@@ -59,7 +59,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.gson-2.3.1.jar=lib/gson-2.3.1-javadoc.jar
-javadoc.reference.jsoup-1.8.1.jar=lib/jsoup-1.8.1-javadoc.jar
+javadoc.reference.jsoup-1.8.2.jar=lib/jsoup-1.8.2-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -95,6 +95,6 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 source.reference.gson-2.3.1.jar=lib/gson-2.3.1-sources.jar
-source.reference.jsoup-1.8.1.jar=lib/jsoup-1.8.1-sources.jar
+source.reference.jsoup-1.8.2.jar=lib/jsoup-1.8.2-sources.jar
 src.dir=src
 test.src.dir=test
