Now you can switch between Manager and Downloader and now the manager is the default

--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.andreasgiemza</groupId>
-    <artifactId>mangadownloader</artifactId>
+    <artifactId>mangamanageranddownloader</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>MangaDownloader</name>
+    <name>MangaManagerAndDownloader</name>
     <url>https://github.com/hurik/MangaDownloader</url>
     <dependencies>
         <dependency>
@@ -27,7 +27,6 @@
             <artifactId>xstream</artifactId>
             <version>1.4.8</version>
         </dependency>
-
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,7 +40,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>de.andreasgiemza.mangadownloader.MangaDownloader</mainClass>
+                            <mainClass>de.andreasgiemza.mangamanager.MangaManager</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
